# mo-graphify-obsidian-memory

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  INDEX.md  LICENSE  MNEMOSYNE_INVESTMENT_AUDIT_REPORT.md  MNEMOSYNE_STRATEGIC_DECISIONS.md  MNEMOSYNE_V3_REBUILD_PLAN.md  Makefile  PLATFORM_BUILDER_BRIEF.md  PLATFORM_BUILDER_RECOMMENDATIONS.md  README.md  RESEARCH_COGNEE_PRODUCT.md  RESEARCH_COMPETITOR_GAPS.md  RESEARCH_CRITIQUE_CHRONICLE.md  RESEARCH_DATABASE_ARCHITECTURE_JULY2026.md  RESEARCH_DOMAIN_GAPS_JUNE30.md  RESEARCH_FRESH_JUNE30.md  RESEARCH_INTEGRATIONS_JUNE30.md  RESEARCH_MCP_INTEGRATION_JULY2026.md  RESEARCH_MEMIFY_JUNE30.md  RESEARCH_MEMORY_LANDSCAPE_JULY2026.md  RESEARCH_NOVEL_USE_CASES_JUNE30.md  RESEARCH_SECURITY_LANDSCAPE_JULY2026.md  RESEARCH_ULTIMATE_MEMORY_OS_GAPS_JULY2026.md  RESEARCH_WINNING_PROJECTS.md  SETUP.md  SKILL.md  TEST_REPORT.md  docker-compose.yml  pyproject.toml
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflow/: ci.yml
.github/workflows/: ci.yml
docs/: MASTER_PLAN_v1.0.md  MASTER_PLAN_v1.1.md
docs/build-prompts/: prompt-phase-0-foundation.md  prompt-phase-1-sqlite-fallback.md
docs/decisions/: decision-001-project-structure-and-session-management.md  decision-002-phased-build-plan.md  decision-004-github-plus-memory-vault.md  (+2 more)
mnemosyne/: __init__.py  cli.py  compat.py  consolidation.py  core.py  embedder.py  mcp_server.py  prospective.py  security.py  vault.py
scripts/: mo_graphify_memory.py
tests/: conftest.py  test_embedder.py  test_integration.py  test_mcp.py  test_mcp_server.py  test_security.py  test_sqlite.py  test_store_factory.py  test_vault.py
(+8 files in other folders)
